# DSEA2026-final-report

./: .gitignore  README.md  backend_data_cleaning_technical_report.Rmd  backend_data_cleaning_technical_report.html  codebook.md  readme.txt  taipei_urban_renewal_hazard_race.Rmd  taipei_urban_renewal_hazard_race.html
Data/: clean_data_2026-05-08.csv
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/: config.py  main.py  router.py
backend/app/handlers/: __init__.py  chloride_ionized_concrete.py  chloride_ionized_concrete_geojson.py  earthquake_building.py  earthquake_building_geojson.py  urban_update.py
backend/app/middleware/: exception.py
backend/app/models/: _common.py  chloride_ionized_concrete.py  chloride_ionized_concrete_geojson.py  earthquake_building_geojson.py  earthquakes_building.py  urban_update_model.py
backend/app/routers/: __init__.py  chloride_ionized_concrete.py  earthquake_buildings.py  geojson.py  health.py  urban_update.py
backend/app/services/: chloride_ionized_concrete.py  chloride_ionized_concrete_geojson.py  earthquake_building.py  earthquake_building_geojson.py  urban_update_service.py
backend/app/utils/: cache.py  geo.py
backend/data/: chloride_ionized_concrete_cleaning.py  chloride_ionized_concrete_format.json  earthquake_building_cleaning.py  earthquake_building_format.json  util.py
backend/public/: taipei-districts.geojson
backend/test/: test_address_parsing.py  test_chloride_ionized_concrete.py  test_models_earthquakes.py  test_routers.py  test_urban_update_service.py
