[project]
name = "backend"
version = "0.1.0"
description = "Taipei urban renewal and hazard buildings data API"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "geojson>=3.2.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "shapely>=2.1.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["ruff>=0.14.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
